--- a/assessment.html
+++ b/assessment.html
@@ -3,14 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="twitter:card" content="summary" />
-    <meta property="og:url" content="https://t4keshi.github.io/assessment/assessment.html" />
-    <meta property="og:title" content="あなたのいいところ診断" />
-    <meta property="og:description" content="N予備校プログラム入門コースで制作した、「あなたのいいところ診断」サイトです。" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>あなたのいいところ診断</title>
+    <meta name="twitter:card" content="summary">
+    <meta property="og:url" content="https://t4keshi.github.io/assessment/assessment.html">
+    <meta property="og:title" content="あなたのいいところ診断">
+    <meta property="og:description" content="N予備校プログラム入門コースで制作した、「あなたのいいところ診断」サイトです。">
     <link rel="stylesheet" href="assessment.css">
+    <title>あなたのいいところ診断</title>    
 </head>
 
 <body>
